# bt

./: Expression.hs  Main.hs  Parser.hs  Render.hs  bt.cabal
src/: Analysis.hs  Expression.hs  Main.hs  Operator.hs  Parser.hs  Render.hs  Tree.hs
src/Boolean/: Analysis.hs  Expression.hs  Operator.hs  Parser.hs  Predef.hs  Reflection.hs  Render.hs
src/Data/Boolean/: Tree.hs
src/interactive/: Command.hs  Main.hs  Parser.hs
