name:                bt
version:             0.1.0.0
synopsis:            The Bool Tool
author:              Index Int
build-type:          Simple
cabal-version:       >=1.10

executable bt
  main-is:             Main.hs
  other-modules:       Expression
                       Render
                       Parser
  build-depends:       base >=4.7 && <4.8,
                       lens >=4.3 && <4.4,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       haskeline >=0.7 && <0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -O2 -threaded "-with-rtsopts=-N"
