name:                bt
version:             0.1.0.0
synopsis:            The Bool Tool
author:              Index Int
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Boolean.Expression
                       Boolean.Analysis
                       Boolean.Operator
                       Boolean.Parser
                       Boolean.Render
                       Data.Boolean.Tree

  build-depends:       base, mtl, containers, parsec, parsers
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  LambdaCase, TupleSections
  ghc-options:         -W -O2

executable bt-interactive
  main-is:             Main.hs
  build-depends:       bt, base, mtl, containers, haskeline
  hs-source-dirs:      src/interactive
  default-language:    Haskell2010
  ghc-options:         -W -O2 -threaded "-with-rtsopts=-N"
